<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f1f1f1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dip" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/usernameOrTel"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginBottom="10dip"
            android:background="@drawable/edit_bg"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginBottom="20dip"
            android:background="@drawable/edit_bg"
            android:ems="10"
            android:password="true"
            android:singleLine="true" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginBottom="20dip"
            android:background="@drawable/login_button"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="left"
            android:text="@string/register"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>