<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#f1f1f1"
    >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dip"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="16sp"
            android:layout_marginBottom="10dip"
             />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@drawable/edit_bg"
            android:layout_marginBottom="10dip"
            android:singleLine="true"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginBottom="10dip"
            android:textSize="16sp"
             />

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@drawable/edit_bg"
            android:layout_marginBottom="10dip"
            android:singleLine="true"
            android:password="true"
            android:ems="10" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passagaion"
            android:textSize="16sp"
            android:layout_marginBottom="10dip"
             />

        <EditText
            android:id="@+id/et_passagain"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@drawable/edit_bg"
            android:layout_marginBottom="15dip"
            android:password="true"
            android:ems="10" />

        <Button
            android:id="@+id/bt_finish"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@drawable/login_button"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:textSize="16sp"
             />

    </LinearLayout>

</LinearLayout>
