<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:orientation="vertical" >

    <include
        android:id="@+id/formtop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/lk_topbar" >
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dip" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/registertel"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_tel"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginBottom="15dip"
            android:background="@drawable/edit_bg"
            android:ems="10"
            android:numeric="integer"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/bt_sendcode"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginBottom="15dip"
            android:background="@drawable/login_button"
            android:text="@string/sendcode"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/ll_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:text="@string/telcode"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_marginBottom="15dip"
                android:background="@drawable/edit_bg"
                android:numeric="integer"
                android:ems="10" />

            <Button
                android:id="@+id/bt_next"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:background="@drawable/login_button"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>