<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include
            android:id="@+id/formtop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/lk_topbar" >
        </include>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bgbd"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ll_profile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:src="@drawable/img_info" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:text="个人信息"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_margin="5dip"
                android:background="@drawable/divider" />
            
           
            
            <LinearLayout
                android:id="@+id/ll_collect_shop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:src="@drawable/img_colle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:text="@string/collectShop"
                    android:textSize="16sp" />
            </LinearLayout>
            
              <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_margin="5dip"
                android:background="@drawable/divider" />
            
            
            <LinearLayout
                android:id="@+id/ll_collect_product"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:src="@drawable/img_colle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:text="@string/collectProduct"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_margin="5dip"
                android:background="@drawable/divider" />

            <LinearLayout
                android:id="@+id/ll_my_product"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:src="@drawable/img_order" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:text="@string/myOrder"
                    android:textSize="16sp" />
            </LinearLayout>
            
             <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_margin="5dip"
                android:background="@drawable/divider" />
            
            <LinearLayout
                android:id="@+id/ll_coupons"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:src="@drawable/img_order" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:text="@string/coupons"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_margin="5dip"
                android:background="@drawable/divider" />

            <LinearLayout
                android:id="@+id/ll_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:padding="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:src="@drawable/img_mes" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:text="消息中心"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/glk_exit_btn"
            android:text="退出当前账号"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>